--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="container__title">Whoops..</h1>
+      <h1 class="container__title"></h1>
+      <h1 class="container__title--2"></h1>
     </div>
     <script src="app.js"></script>
   </body>
